--- a/social.css
+++ b/social.css
@@ -1,5 +1,5 @@
 .box{
-    background-color:rgb(238,238,238);
+    background-color: red;
     padding: 60px 0px;
     /* box-sizing: border-box; */
     /* margin: 30px; */
